--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "reaptcha": "^1.7.2"
   },
   "devDependencies": {
     "prettier": "2.1.1"
