--- a/static/projects.json
+++ b/static/projects.json
@@ -9,6 +9,7 @@
     { "name": "Change-My-Mind", "progress": 80 },
     { "name": "Mushroom-Meshwork", "progress": 100 },
     { "name": "rearkdown", "progress": 90 },
-    { "name": "React-Food-Spin", "progress": 100 }
+    { "name": "React-Food-Spin", "progress": 100 },
+    { "name": "next-e-commerce", "progress": 75 }
   ]
 }
