--- a/static/projects.json
+++ b/static/projects.json
@@ -10,6 +10,7 @@
     { "name": "Mushroom-Meshwork", "progress": 100 },
     { "name": "rearkdown", "progress": 90 },
     { "name": "React-Food-Spin", "progress": 100 },
-    { "name": "next-e-commerce", "progress": 75 }
+    { "name": "next-e-commerce", "progress": 75 },
+    { "name": "spotify50", "progress": 95 }
   ]
 }
